--- a/src/app/shared/audio-list/audio-list.component.scss
+++ b/src/app/shared/audio-list/audio-list.component.scss
@@ -8,7 +8,7 @@
     position: sticky;
     padding: 0 2rem;
     height: 7rem;
-    background: $second_linear-gradient;
+    background: $second-linear-gradient;
     display: flex;
     flex-direction: column;
     align-content: center;
