--- a/src/variables.scss
+++ b/src/variables.scss
@@ -19,7 +19,7 @@ $linear-gradient: linear-gradient(
     $alpha: 0.75,
   )
 );
-$second_linear-gradient: linear-gradient(
+$second-linear-gradient: linear-gradient(
   135deg,
   rgba(
     $color: $primary-color,
