--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -2,7 +2,7 @@
   <app-table [records]="vm.words"
              [total]="vm.total"
              [isLoading]="vm.isLoading"
-             [headers]="headers">
+             [headers]="vm.headers">
     <div slot="top"
          class="top-table">
       <button nz-button
