--- a/src/app/pages/main-page.component.html
+++ b/src/app/pages/main-page.component.html
@@ -8,7 +8,8 @@
           class="navbar__logo">
         {{ 'SUPER_CHINESE' | translate }}
       </h2>
-      <small class="navbar__slogan">{{ 'SLOGAN' | translate }}</small>
+      <p [style.font-size.px]="'13'"
+         class="navbar__slogan">{{ 'SLOGAN' | translate }}</p>
     </div>
     <div class="navbar__menu">
       <!-- <a routerLink="/home"
