--- a/src/app/shared/table/table.component.scss
+++ b/src/app/shared/table/table.component.scss
@@ -3,11 +3,11 @@
 ::ng-deep {
   .ant-table.ant-table-small {
     font-family: sans-serif, monospace;
+    // font-size: 1rem;
   }
   .ant-table {
     color: $black;
     background: #fff;
-    font-size: 16px;
     font-weight: 300;
     font-display: fall-back;
     scroll-snap-type: y mandatory;
@@ -30,6 +30,9 @@
   }
   .ant-table-thead th.ant-table-column-sort:hover {
     background: rgba($color: $second-white, $alpha: 0.25);
+  }
+  .ant-table.ant-table-small .ant-table-tbody > tr > td {
+    padding: 0.25rem 0.5rem;
   }
   .ant-table-column-title {
     position: static;
@@ -55,10 +58,10 @@ nz-table {
   box-shadow: 0 2px 10px 5px rgba($color: $black, $alpha: 0.25);
 }
 
-@media screen and (max-width: $tablet) {
-  ::ng-deep {
-    .ant-table.ant-table-small {
-      font-size: 13px;
-    }
-  }
-}
+// @media screen and (max-width: $tablet) {
+//   ::ng-deep {
+//     .ant-table.ant-table-small {
+//       font-size: 13px;
+//     }
+//   }
+// }
