--- a/src/app/pages/main-page.component.scss
+++ b/src/app/pages/main-page.component.scss
@@ -13,7 +13,7 @@
     align-items: center;
     &__logo {
       color: $primary-color;
-      background: $magenta-blue-linear-gradient;
+      background: $linear-gradient;
       background-clip: text;
       font-weight: 600;
       -webkit-text-fill-color: transparent;
