--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -41,7 +41,7 @@
     <ng-template appTableCell="display"
                  let-rowIndex="rowIndex"
                  let-value>
-      <p style="margin-top: 0.5rem; color: #bf616a; font-family: MyFont; font-weight: 400;">{{ value
+      <p style="margin-top: 0.25rem; color: #bf616a; font-family: MyFont; font-size: 1rem; font-weight: 400;">{{ value
         }}</p>
     </ng-template>
 
