--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
@@ -47,4 +47,7 @@ nz-table {
   margin: 0;
   padding: 0 0.25rem;
   width: 3.5rem;
+  border-width: 1.5px;
+  border-radius: 2.5px;
+  font-weight: 400;
 }
