--- a/src/app/shared/table/table.component.scss
+++ b/src/app/shared/table/table.component.scss
@@ -3,7 +3,6 @@
 ::ng-deep {
   .ant-table.ant-table-small {
     font-family: sans-serif, monospace;
-    // font-size: 1rem;
   }
   .ant-table {
     color: $black;
@@ -20,7 +19,8 @@
   }
   .ant-table-thead > tr > th {
     background: $white;
-    font-weight: 500;
+    font-family: $primary-font;
+    font-weight: 600;
   }
   .ant-table-thead > tr > th:first-child {
     color: $red;
