--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -41,8 +41,7 @@
     <ng-template appTableCell="display"
                  let-rowIndex="rowIndex"
                  let-value>
-      <p style="margin-top: 0.25rem; color: #bf616a; font-family: MyFont; font-size: 1rem; font-weight: 400;">{{ value
-        }}</p>
+      <p style="margin-top: 0.25rem; color: #bf616a; font-family: MyFont; font-size: 15px;">{{ value }}</p>
     </ng-template>
 
     <ng-template appTableCell="lowercase"
@@ -91,7 +90,7 @@
     <ng-template appTableCell="date"
                  let-rowIndex="rowIndex"
                  let-value>
-      <div style="font-weight: 200;">{{ value | date: 'hh:mm:ss dd/MM/yyyy' }}</div>
+      <div>{{ value | date: 'hh:mm:ss dd/MM/yyyy' }}</div>
     </ng-template>
 
     <ng-template appTableCell="ellipsis"
