--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="page">
+  <i> {{'PLAYGROUND' | translate}} </i>
   <div class="cards--star">
     <div routerLink="/dictionary"
          class="card">
