--- a/src/app/shared/table/table.component.scss
+++ b/src/app/shared/table/table.component.scss
@@ -12,6 +12,15 @@
     .ant-table-header {
       background: $second-white;
     }
+    cdk-virtual-scroll-viewport {
+      min-height: 60vh !important;
+      .ant-empty-image {
+        height: 12rem;
+      }
+      .ant-empty-description {
+        font-size: large;
+      }
+    }
   }
   .ant-table-thead > tr > th {
     background: $white;
@@ -53,6 +62,10 @@
 
 nz-table {
   box-shadow: 0 2px 10px 5px rgba($color: $black, $alpha: 0.25);
+}
+
+nz-empty {
+  height: 45vh;
 }
 
 // @media screen and (max-width: $tablet) {
