--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -24,8 +24,7 @@
                (keydown.enter)="getChineseWords($event)" />
       </nz-input-group>
       <ng-template #suffixIconSearch>
-        <nz-switch [style.margin-left.rem]="'0.25'"
-                   [ngModel]="isChinaVietnamSearch"
+        <nz-switch [ngModel]="isChinaVietnamSearch"
                    (ngModelChange)="isChinaVietnamSearch = $event"></nz-switch>
       </ng-template>
       <strong class="totals"><i>{{ 'TOTALS' | translate: { totals: vm.total } }}</i></strong>
