--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -13,7 +13,7 @@
               nzType="plus"
               nzTheme="outline"></span>{{ 'ACTION.CREATE' | translate }}</button>
       <nz-input-group class="search-input"
-                      [nzSuffix]="suffixIconSearch">
+                      [nzSuffix]="switch">
         <input *ngIf="isChinaVietnamSearch"
                nz-input
                [placeholder]="'ACTION.LOOK_UP.CHI_VIE' | translate"
@@ -23,7 +23,7 @@
                [placeholder]="'ACTION.LOOK_UP.VIE_CHI' | translate"
                (keydown.enter)="getChineseWords($event)" />
       </nz-input-group>
-      <ng-template #suffixIconSearch>
+      <ng-template #switch>
         <nz-switch [ngModel]="isChinaVietnamSearch"
                    (ngModelChange)="isChinaVietnamSearch = $event"></nz-switch>
       </ng-template>
@@ -56,7 +56,7 @@
     <ng-template appTableCell="display"
                  let-rowIndex="rowIndex"
                  let-value>
-      <p style="margin-top: 0.25rem; color: #bf616a; font-family: MyFont; font-size: 1rem;">{{ value }}</p>
+      <p style="margin-top: 0.375rem; color: #bf616a; font-family: MyFont; font-size: 1rem;">{{ value }}</p>
     </ng-template>
 
     <ng-template appTableCell="lowercase"
