--- a/src/app/shared/table/table.component.scss
+++ b/src/app/shared/table/table.component.scss
@@ -38,7 +38,7 @@
     background: rgba($color: $second-white, $alpha: 0.25);
   }
   .ant-table.ant-table-small .ant-table-tbody > tr > td {
-    padding: 0.125rem 0.5rem;
+    padding: 0 0.5rem;
   }
   .ant-table-column-title {
     position: static;
