--- a/src/assets/scss/_tab.scss
+++ b/src/assets/scss/_tab.scss
@@ -1,6 +1,6 @@
 ::ng-deep {
   .ant-tabs-nav-wrap {
-    padding: 0 8rem;
+    padding: 0 $big-space;
     background: $white;
   }
   .ant-tabs-top > .ant-tabs-nav {
@@ -19,7 +19,7 @@
     text-shadow: none;
   }
   .ant-tabs-tab {
-    padding: 0.5rem 0;
+    padding: $small-space 0;
     color: $black;
     font-size: 1rem;
     font-weight: 600;
@@ -38,7 +38,7 @@
     transition: $transition;
   }
   .ant-tabs-content-holder {
-    padding: 0rem 8rem;
+    padding: 0rem $big-space;
     margin-bottom: 0;
   }
 }
@@ -51,10 +51,10 @@ nz-tabset {
 @media screen and (max-width: $tablet) {
   ::ng-deep {
     .ant-tabs-nav-wrap {
-      padding: 0 4rem;
+      padding: 0 $medium-space;
     }
     .ant-tabs-content-holder {
-      padding: 0rem 4rem;
+      padding: 0 $medium-space;
     }
   }
 }
@@ -62,10 +62,10 @@ nz-tabset {
 @media screen and (max-width: $mobile) {
   ::ng-deep {
     .ant-tabs-nav-wrap {
-      padding: 0 1rem;
+      padding: 0 $small-space;
     }
     .ant-tabs-content-holder {
-      padding: 0rem 1rem;
+      padding: 0 $small-space;
     }
   }
 }
