--- a/src/variables.scss
+++ b/src/variables.scss
@@ -8,6 +8,10 @@ $gray: #4c566a;
 $red: #bf616a;
 $blue: #88c0d0;
 
+$big-space: 8rem;
+$medium-space: 4rem;
+$small-space: 0.5rem;
+
 $linear-gradient: linear-gradient(
   135deg,
   rgba(
