--- a/src/app/pages/dictionary/dictionary.component.scss
+++ b/src/app/pages/dictionary/dictionary.component.scss
@@ -3,8 +3,8 @@
 
 @media screen and (max-width: $mobile) {
   .page {
-    padding: 0.25rem;
-    p {
+    padding: 0.5rem;
+    .intro {
       text-indent: 1.5rem;
     }
   }
