--- a/src/app/shared/table/table.component.html
+++ b/src/app/shared/table/table.component.html
@@ -5,7 +5,7 @@
           [nzBordered]="false"
           [nzOuterBordered]="true"
           [nzVirtualForTrackBy]="trackByIndex"
-          [nzVirtualItemSize]="records.length * 15 / 100"
+          [nzVirtualItemSize]="28"
           [nzFrontPagination]="clientPagination"
           [nzShowPagination]="clientPagination"
           [nzShowSizeChanger]="clientPagination"
@@ -20,7 +20,7 @@
       <th *ngIf="isSelectable"
           [nzChecked]="allRecordsChecked"
           [nzIndeterminate]="indeterminate"
-          [nzDisabled]="!(isSelectable)"
+          [nzDisabled]="!(isSelectable && records.length)"
           (nzCheckedChange)="onCheckAll($event)"
           nzWidth="2rem"
           nzLeft>
