--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -29,6 +29,11 @@
       </ng-template>
       <strong class="totals"><i>{{ 'TOTALS' | translate: { totals: vm.total } }}</i></strong>
     </div>
+    <ng-template appTableCell="speak"
+                 let-rowIndex="rowIndex"
+                 let-value>
+    </ng-template>
+
     <ng-template appTableCell="actions"
                  let-rowIndex="rowIndex"
                  let-value>
@@ -56,7 +61,13 @@
     <ng-template appTableCell="display"
                  let-rowIndex="rowIndex"
                  let-value>
-      <p style="margin-top: 0.375rem; color: #bf616a; font-family: MyFont; font-size: 1rem;">{{ value }}</p>
+      <div class="display">
+        <p style="margin-top: 0.375rem; color: #bf616a; font-family: MyFont; font-size: 1rem;">{{ value }}</p>
+        <span nz-icon
+              nzType="sound"
+              nzTheme="fill"
+              (click)="onSpeak(value)"></span>
+      </div>
     </ng-template>
 
     <ng-template appTableCell="lowercase"
