--- a/src/app/shared/table/table.component.html
+++ b/src/app/shared/table/table.component.html
@@ -1,4 +1,5 @@
 <ng-content select="[slot=top]"></ng-content>
+<ng-content select="[slot=actions]"></ng-content>
 <nz-table #virtualTable
           [style.margin-top.rem]="'0.25'"
           [nzSize]="'small'"
